--- a/Projeto_Site/Projeto_Site/Páginas/home.html
+++ b/Projeto_Site/Projeto_Site/Páginas/home.html
@@ -102,7 +102,7 @@
 
 					<div class="mySlides fade">
 						<a href="../Páginas/estrelas.html">
-							<img src="../Imagens/sol2.jpg" class="image-size">
+							<img src="../Imagens/sol2.png" class="image-size">
 						</a>
 					</div>
 
